--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,11 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.bpifrance</groupId>
-  <artifactId>https-rest-call</artifactId>
+  <groupId>com.redhat.pam</groupId>
+  <artifactId>sandbox</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>kjar</packaging>
-  <name>https-rest-call</name>
+  <name>sandbox</name>
   <description></description>
   <dependencies>
     <dependency>
